ezystocks-project-added

--- a/index.html
+++ b/index.html
@@ -160,33 +160,32 @@
 		</section>
 
 
-		<!-- Three
 		<section id="three" class="spotlight style3 left">
-			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+			<span class="image fit main bottom"><img src="images/ezystocks_mockup.png" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>QuickPizza</h2>
-					<p>Pizza ordering app</p>
+					<h2>EzyStocks</h2>
+					<p>Online trading and stock prediction app</p>
 				</header>
-				<p>Built a pizza ordering app with Flutter and Bloc, integrating Firebase for real-time data.</p>
-				<p>Enabled real-time order tracking and user authentication.</p>
-				<p>Ensured smooth performance using Bloc for menu browsing and customization.</p>
+				<p>Developed a robust trading app with clean architecture and BLoC state management.</p>
+				<p>Implemented LSTM for next-day stock price predictions, enhancing user investment strategies.</p>
+				<p>Used FL charts and animations for dynamic data visualization, improving user engagement.</p>
 				<ul class="actions">
 					<li>
-						<a href="https://github.com/your-frontend-repo" target="_blank" class="button">
+						<a href="https://github.com/anujjainwork/ezystocks-frontend" target="_blank" class="button">
 							<img src="images/github-mark-white.png" alt="GitHub"
 								style="height: 30px; vertical-align: middle;">
 							Frontend
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/your-backend-repo" target="_blank" class="button">
+						<a href="https://github.com/anujjainwork/EzyRide-backend" target="_blank" class="button">
 							<img src="images/github-mark-white.png" alt="GitHub"
 								style="height: 30px; vertical-align: middle;">
 							Backend
 						</a>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="https://www.figma.com/file/your-design" target="_blank" class="button">
 							<img src="images/figma-logo1.png" alt="Figma" style="height: 30px; vertical-align: middle;">
 							Figma
@@ -200,8 +199,8 @@
 							</li>
 							</ul>
 							</div>
-							<a href="#four" class="goto-next scrolly">Next</a>
-							</section> -->
+							<a href="#four" class="goto-next scrolly">Next</a> -->
+							</section>
 							
 							<!-- Five -->
 							<section id="five" class="wrapper style2 special fade">
